Fix sticky header z-index

--- a/betting app front/assets/sass/components/soccer/future/_sticky-header.scss
+++ b/betting app front/assets/sass/components/soccer/future/_sticky-header.scss
@@ -1,7 +1,7 @@
 .sticky-header {
     position: sticky;
     top: 10vh;
-    z-index: 100;
+    z-index: 10;
     display: flex;
     align-items: center;
     justify-content: space-between;
