--- a/betting app front/assets/sass/layout/_header.scss
+++ b/betting app front/assets/sass/layout/_header.scss
@@ -59,7 +59,7 @@
 		gap: 1.5rem;
 		background-color: $p2;
 		transition: 1s;
-		z-index: 1000;
+		z-index: 10000;
 	}
 
 	.app-header .responsive_nav {
